# TravelPlanner

./: .gitignore  README.md  TravelPlanner_MultiAgent_方案.md  findings.md  progress.md  start-dev.ps1  task_plan.md
backend/: .env.example  .gitignore  langgraph.json  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: demo_data.py  errors.py  graph_builder.py  llm_client.py  planning_gates.py  poi_types.py  repair_tasks.py  utils.py
backend/app/ai/mcp/: __init__.py  amap_stdio_server.py  client.py
backend/app/ai/models/: __init__.py  graph_models.py  planning_contracts.py  travel_models.py
backend/app/ai/nodes/: __init__.py  anchor_resolver_node.py  attraction_node.py  fan_in_node.py  (+13 more)
backend/app/api/: deps.py  plan_stream_runner.py
backend/app/config/: __init__.py  logging.py  settings.py
backend/app/services/: __init__.py  amap.py
backend/tests/: test_anchor_resolution_contract.py  test_attraction_service.py  test_cors.py  test_fan_in.py  test_graph_builder.py  test_graph_models.py  test_hotel_restaurant_service.py  test_integration.py  test_itinerary_layout.py  test_llm_utils.py  test_local_mcp_server.py  test_orchestrator_blockers.py  test_orchestrator_node.py  test_plan_evaluator_node.py  test_plan_stream_runner.py  test_planning_contracts.py  test_poi_service_conversion.py  test_repair_tasks.py  test_reviewer_service.py  test_settings.py  test_start_dev_script.py  test_strategy_contract_node.py  test_strategy_first_nodes.py  test_transport_service.py  test_travel_models.py  test_travel_stream.py  test_weather_service.py
(+97 files in other folders)
