[project]
name = "travel-planner-backend"
version = "0.1.0"
description = "Multi-Agent Smart Travel Planning System Backend"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.10",
    "langgraph>=1.0.9",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "fastapi>=0.115.0",
    "fastmcp>=3.0.2",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "langchain-qwq>=0.3.4",
    "langgraph-cli[inmem]>=0.4.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
markers = [
    "integration: integration tests for end-to-end planning flow",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
